Fix alignment on ltr from 2e73ff52dc

--- a/wiki/src/install/inc/stylesheets/download.css
+++ b/wiki/src/install/inc/stylesheets/download.css
@@ -138,8 +138,8 @@ span.step-number {
 .what-is-bittorrent-link {
   position: absolute;
   top: 2.4em;
+  right: 1em;
 }
-html[dir="ltr"] .what-is-bittorrent-link { right: 1em; }
 html[dir="rtl"] .what-is-bittorrent-link { left: 1em; }
 
 #already-downloaded {
